--- a/BlogEngine/BlogEngine/Shared/BlogEngine.Shared.csproj
+++ b/BlogEngine/BlogEngine/Shared/BlogEngine.Shared.csproj
@@ -8,4 +8,12 @@
     <Folder Include="DTOs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\BlogEngine.Core\BlogEngine.Core.csproj" />
+  </ItemGroup>
+
 </Project>
