--- a/BlogEngine/BlogEngine.Server/BlogEngine.Server.csproj
+++ b/BlogEngine/BlogEngine.Server/BlogEngine.Server.csproj
@@ -4,5 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogEngine.Shared\BlogEngine.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
