Configured and created DB, modified Generic Repository and Moved ReadingTimeEstimator into Server

--- a/BlogEngine/BlogEngine.ClientServices/BlogEngine.ClientServices.csproj
+++ b/BlogEngine/BlogEngine.ClientServices/BlogEngine.ClientServices.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogEngine.Shared\BlogEngine.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
