--- a/BlogEngine/BlogEngine.Server/appsettings.json
+++ b/BlogEngine/BlogEngine.Server/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogEngine;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
