--- a/BlogEngine/BlogEngine.Shared/BlogEngine.Shared.csproj
+++ b/BlogEngine/BlogEngine.Shared/BlogEngine.Shared.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
   </ItemGroup>
 
