Added MailService and notification system

--- a/BlogEngine/BlogEngine.Server/appsettings.json
+++ b/BlogEngine/BlogEngine.Server/appsettings.json
@@ -10,5 +10,15 @@
 
   "ConnectionStrings": {
     "DbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogEngine;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  "SMTPConfig": {
+    "SMTPFrom": "example@gmail.com",
+    "Password": "example_password",
+    "Username": "BLOG",
+    "Host": "smtp.gmail.com",
+    "Port": 587, // 25
+    "EnableSsl": true,
+    "BCCRecipientList": "bcc_adress1@gmail.com, bcc_adress2@gmail.com"
   }
 }
