--- a/BlogEngine/BlogEngine.Server/appsettings.json
+++ b/BlogEngine/BlogEngine.Server/appsettings.json
@@ -15,7 +15,7 @@
   "SMTPConfig": {
     "SMTPFrom": "example@gmail.com",
     "Password": "example_password",
-    "Username": "BLOG",
+    "DisplayName": "BLOG",
     "Host": "smtp.gmail.com",
     "Port": 587, // 25
     "EnableSsl": true,
