--- a/BlogEngine/BlogEngine.Server/appsettings.json
+++ b/BlogEngine/BlogEngine.Server/appsettings.json
@@ -20,5 +20,9 @@
     "Port": 587, // 25
     "EnableSsl": true,
     "BCCRecipientList": "bcc_adress1@gmail.com, bcc_adress2@gmail.com"
+  },
+
+  "JWT": {
+    "Key": "py6JpvtEcefLT_ur8Uqd48ZfZtT-op7CAFsq_7WKnvG2JnUjPVvcCoIWBoya-HJ7pj_x1SI7u4-LzUU9tvDHOfIHBwfUCAWrhQKf3JfaplPW-nKXsIiM64CaiNIcjbaXOJRKrKNPSjUbcFPDChr-rEcGwc0zn7EN68wRZ8mBF77COSujd1xKdpz2rv3oI6nShjZfvMIRE-yInKtUswSAXp_H8Dfjm-9z70U4hBByBX7KgMM48IBoa_nDNCRvDJj7dLAfMs4ce6dcFyFzcWr_WBN8Yusxe3SEsW9qvri1tYtGumR4QtnKQcm9D5Sflu_XQCHCKwl4GgSmmcsOPvkW3Q"
   }
 }
