--- a/BlogEngine/BlogEngine.Server/BlogEngine.Server.csproj
+++ b/BlogEngine/BlogEngine.Server/BlogEngine.Server.csproj
@@ -11,6 +11,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.6" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.6" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.6">
 			<PrivateAssets>all</PrivateAssets>
