--- a/BlogEngine/BlogEngine.ClientServices/BlogEngine.ClientServices.csproj
+++ b/BlogEngine/BlogEngine.ClientServices/BlogEngine.ClientServices.csproj
@@ -6,6 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.8" />
 		<PackageReference Include="System.Text.Json" Version="4.7.2" />
 	</ItemGroup>
 
