Added additional information to ApplicationUser

--- a/BlogEngine/BlogEngine.Client/BlogEngine.Client.csproj
+++ b/BlogEngine/BlogEngine.Client/BlogEngine.Client.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\BlogEngine.Shared\BlogEngine.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Components\" />
+  </ItemGroup>
+
 </Project>
