Configured role management and upgraded AccountsController

--- a/BlogEngine/BlogEngine.Core/BlogEngine.Core.csproj
+++ b/BlogEngine/BlogEngine.Core/BlogEngine.Core.csproj
@@ -19,4 +19,13 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="SQLScripts\DeleteAdminRoleSQLQuery.sql">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	  <None Update="SQLScripts\InsertAdminRoleSQLQuery.sql">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
