Added a few unit tests for Extensions and validation Attributes

--- a/BlogEngine/BlogEngine.Tests/BlogEngine.Tests.csproj
+++ b/BlogEngine/BlogEngine.Tests/BlogEngine.Tests.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BlogEngine.ClientServices\BlogEngine.ClientServices.csproj" />
     <ProjectReference Include="..\BlogEngine.Core\BlogEngine.Core.csproj" />
+    <ProjectReference Include="..\BlogEngine.Server\BlogEngine.Server.csproj" />
   </ItemGroup>
 
 </Project>
