--- a/BlogEngine/BlogEngine.Client/BlogEngine.Client.csproj
+++ b/BlogEngine/BlogEngine.Client/BlogEngine.Client.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Syncfusion.Blazor" Version="18.2.0.45" />
     <PackageReference Include="Tewr.Blazor.FileReader" Version="1.6.0.20166" />
+    <PackageReference Include="Toolbelt.Blazor.TwitterShareButton" Version="7.0.0.31" />
   </ItemGroup>
 
   <ItemGroup>
